:truck: Fix : myChargerListFragment 라벨 변경 - nav_graph.xml 파일에 destination으로 존재하는 MyChargerListFragment 라벨 변경 Related to: #83

--- a/AOS/app/src/main/res/navigation/nav_graph.xml
+++ b/AOS/app/src/main/res/navigation/nav_graph.xml
@@ -26,7 +26,7 @@
     <fragment
         android:id="@+id/myChargerListFragment"
         android:name="com.softeer.team6four.ui.mypage.charger.MyChargerListFragment"
-        android:label="MyChargerFragment"
+        android:label="MyChargerListFragment"
         tools:layout="@layout/fragment_my_charger_list">
         <action
             android:id="@+id/action_myChargerListFragment_to_myChargerFragment"
