:lipstick: Fix : my_charger_graph.xml action 변경 - 탭 전환 간에 navigation 백 스택을 남기지 않도록 하기 위해 popUpTo, popUpToInclusive 속성 추가
Related to: #83

--- a/AOS/app/src/main/res/navigation/my_charger_graph.xml
+++ b/AOS/app/src/main/res/navigation/my_charger_graph.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_my_charger_detail">
         <action
             android:id="@+id/action_myChargerDetailFragment_to_myChargerReservationFragment"
-            app:destination="@id/myChargerReservationFragment" />
+            app:destination="@id/myChargerReservationFragment"
+            app:popUpTo="@id/myChargerDetailFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/myChargerReservationFragment"
@@ -21,6 +23,8 @@
         tools:layout="@layout/fragment_my_charger_reservation">
         <action
             android:id="@+id/action_myChargerReservationFragment_to_myChargerDetailFragment"
-            app:destination="@id/myChargerDetailFragment" />
+            app:destination="@id/myChargerDetailFragment"
+            app:popUpTo="@id/myChargerReservationFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
