:lipstick: Fix : fragment_my_charger.xml 수정 - ChipGroup의 selectionRequired 속성을 true로 설정하여 무조건 하나가 선택되도록 수정
Related to: #83

--- a/AOS/app/src/main/res/layout/fragment_my_charger.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger.xml
@@ -60,6 +60,7 @@
             app:chipSpacingHorizontal="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ib_back"
+            app:selectionRequired="true"
             app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
