:lipstick: Feat : ApplyDetailFragment -> ApplyTimeFragment 화면 전환 작업 - nav_graph.xml 파일에 destination으로 ApplyTimeFragment 추가 - ApplyDetailFragment -> ApplyTimeFragment 전환 액션 추가 - ApplyDetailFragment 다음 버튼 클릭 시 화면 전환 기능 구현
Related to: #95

--- a/AOS/app/src/main/res/navigation/nav_graph.xml
+++ b/AOS/app/src/main/res/navigation/nav_graph.xml
@@ -79,6 +79,17 @@
     <fragment
         android:id="@+id/applyDetailFragment"
         android:name="com.softeer.team6four.ui.apply.ApplyDetailFragment"
-        android:label="ApplyDetailFragment" />
+        android:label="ApplyDetailFragment"
+        tools:layout="@layout/fragment_apply_detail">
+        <action
+            android:id="@+id/action_applyDetailFragment_to_applyTimeFragment"
+            app:destination="@id/applyTimeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/applyTimeFragment"
+        android:name="com.softeer.team6four.ui.apply.ApplyTimeFragment"
+        android:label="ApplyTimeFragment"
+        tools:layout="@layout/fragment_apply_time"/>
+
 
 </navigation>
