:lipstick: Feat : nav_graph.xml Destination, Action 추가 -  nav_graph.xml 파일에 ApplyCompleteFragment를 destination으로 추가 - 화면 전환을 위한 액션 추가
Related to: #95

--- a/AOS/app/src/main/res/navigation/nav_graph.xml
+++ b/AOS/app/src/main/res/navigation/nav_graph.xml
@@ -89,7 +89,22 @@
         android:id="@+id/applyTimeFragment"
         android:name="com.softeer.team6four.ui.apply.ApplyTimeFragment"
         android:label="ApplyTimeFragment"
-        tools:layout="@layout/fragment_apply_time"/>
+        tools:layout="@layout/fragment_apply_time">
+        <action
+            android:id="@+id/action_applyTimeFragment_to_applyCompleteFragment"
+            app:destination="@id/applyCompleteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/applyCompleteFragment"
+        android:name="com.softeer.team6four.ui.apply.ApplyCompleteFragment"
+        android:label="ApplyCompleteFragment"
+        tools:layout="@layout/fragment_apply_complete">
+        <action
+            android:id="@+id/action_applyCompleteFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
 
 
 </navigation>
