:lipstick: Feat : 일반 버튼 스타일 변경 - disable 상태의 버튼의 색상과 텍스트 색상을 커스텀
Related to: #123

--- a/AOS/app/src/main/res/values/themes.xml
+++ b/AOS/app/src/main/res/values/themes.xml
@@ -39,4 +39,9 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">4dp</item>
     </style>
+
+    <style name="ThemeOverlay.App.Button" parent= "ThemeOverlay.Material3.Button">
+        <item name="android:color">@color/normal_btn_background_color</item>
+        <item name="android:textColor">@color/normal_btn_text_color</item>
+    </style>
 </resources>
